<resources>
    <string name="app_name">DS</string>
    <string name="red">rouge</string>
    <string name="green">vert</string>
    <string name="blue">bleu</string>
    <string name="error_color_value">A color value should be between 0 and 255</string>
    <string name="blueDefaultColor">200</string>
    <string name="vertDefaultColor">254</string>
    <string name="redDefaultColor">130</string>
    <string name="reset_colors">Do yo want to reset colors?</string>
    <string name="yes">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="canceled_reset">Reset canceled</string>
</resources>