<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.verbrugg.controleis4.MainActivity"
    android:background="@color/colorControleBackground"
    android:orientation="vertical">

    <com.example.verbrugg.controleis4.SquareViewContener
        android:id="@+id/Square"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:layout_margin="15dp"
        android:background="@color/colorText">


    </com.example.verbrugg.controleis4.SquareViewContener>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="15dp">
                >

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/red"
                    android:textColor="@color/colorText"
                    android:gravity="center_vertical"
                    android:textAlignment="textEnd"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >

                <EditText
                    android:text="@string/redDefaultColor"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/red"
                    android:maxLength="3"
                    android:textColor="@color/colorText" />
            </LinearLayout>


        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="15dp">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/green"
                    android:textColor="@color/colorText"
                    android:gravity="center_vertical"
                    android:textAlignment="textEnd"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <EditText
                    android:text="@string/vertDefaultColor"
                    android:id="@+id/blue"
                    android:maxLength="3"
                    android:inputType="number"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"

                >

                <TextView

                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/blue"
                    android:textColor="@color/colorText"
                    android:gravity="center_vertical"
                    android:textAlignment="textEnd"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <EditText
                    android:text="@string/blueDefaultColor"
                    android:id="@+id/green"
                    android:maxLength="3"
                    android:inputType="number"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>




</LinearLayout>